• add email functionality to the contact page form using pony gem

--- a/views/contact.erb
+++ b/views/contact.erb
@@ -33,7 +33,7 @@
 <div class="main">
 
 <div class="form_container">
-    <form method="POST" name="email_form" action="../michaeljacobson.co.uk/PHP/email.php">
+    <form method="post" name="email_form" action="/contact/new">
         Full Name<br><input type="text" name="name" id="name"><br>
         <br>
         Email<br><input type="email" name="email" id="email"><br>
