--- a/public/CSS/my_stylesheet.css
+++ b/public/CSS/my_stylesheet.css
@@ -304,19 +304,6 @@ div.blog {
     font-weight: 100;
 }
 
-#lightbox {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    z-index: 99;
-    top: 0;
-    left: 0;
-    text-align: center;
-    background-color: rgba(0, 0, 0, .75);
-    padding-top: 4vh;
-    visibility: hidden;
-}
-
 .lightbox-image {
     max-height: 85vh;
     max-width: 85vw;
@@ -338,4 +325,59 @@ input, textarea {
     font-weight: 300;
     padding: 0;
     margin-bottom: 20px;
+}
+
+.lightbox {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: 99;
+    top: 0;
+    left: 0;
+    text-align: center;
+    background-color: rgba(0, 0, 0, .75);
+    padding-top: 4vh;
+    visibility: hidden;
+}
+
+#confirmation_message {
+    margin: auto;
+    position: relative;
+    top: 20vh;
+    width: 50vw;
+    height: 30vw;
+    background-color: white;
+    text-align: center;
+    padding: 10px;
+    font-size: 24px;
+    font-weight: 200;
+}
+
+#confirmation_inner {
+    top: 80px;
+    position: relative;
+    margin: auto;
+}
+
+#okay {
+    color: black;
+    /*width: 100px;*/
+    font-family: 'source code pro', sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    background-color: ghostwhite;
+    border-radius: 0;
+    margin-bottom: 5px;
+    border: solid 0.25px transparent;
+    -webkit-appearance: none;
+}
+
+#okay:hover {
+    background-color: black;
+    color: ghostwhite;
+    border: solid 0.5px black;
+}
+
+#confirmation_lightbox {
+    visibility: visible;
 }
