--- a/views/gallery.erb
+++ b/views/gallery.erb
@@ -31,7 +31,7 @@
     </ul>
 </div>
 
-<div id="lightbox">
+<div class="lightbox">
     <img src="http://michael-jacobson.co.uk/Gallery%20Photos/Artichoke.jpg" class="lightbox-image">
 </div>
 
