• begin to implement confirmation message when a message is sent via the contact form

--- a/views/index.erb
+++ b/views/index.erb
@@ -46,7 +46,7 @@
 
 </body>
 
-<% if @contact %>
+<% unless @contact.nil? %>
 
 <div class="lightbox" id="confirmation_lightbox">
   <div id="confirmation_message">
