--- a/views/portfolio.erb
+++ b/views/portfolio.erb
@@ -35,7 +35,7 @@
         <div></div>
             <h3 class="portfolio_title">tinyBlogger</h3>
             <a href="http://tinyblogger.co.uk" target="_blank">www.tinyblogger.co.uk</a>
-            <p class="portfolio_blurb">A minimalist microblogging platform.<br>
+            <p class="portfolio_blurb">A simple microblogging platform.<br>
             Built using Ruby, Sinatra, vanilla JavaScript, jQuery, HTML5, and CSS3.</p>
         </div>
         <br><br>
