• edit copy in portfolio page

--- a/views/portfolio.erb
+++ b/views/portfolio.erb
@@ -42,7 +42,7 @@
         <div></div>
             <h3 class="portfolio_title">Ruby, Paper, Scissors!</h3>
             <a href="http://rubypaperscissors.co.uk" target="_blank">www.rubypaperscissors.co.uk</a>
-            <p class="portfolio_blurb">Play Rock, Paper, Scissors (also known as Ro-Sham-Bo) online.<br>
+            <p class="portfolio_blurb">Play Rock, Paper, Scissors (also known as Ro-sham-bo) online.<br>
             Built using Ruby, Sinatra, HTML5 and CSS3.</p>
         </div>
     </div>
