--- a/views/links.erb
+++ b/views/links.erb
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Michael Jacobson | Links </title>
-    <script src='/JavaScript/jquery-3.2.0.js'></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="/JavaScript/script.js"></script>
     <link href="/CSS/my_stylesheet.css" type="text/css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
