• update all image src urls to point to dropbox

--- a/views/links.erb
+++ b/views/links.erb
@@ -38,9 +38,9 @@
 <div id="social_links">
     <ul>
 <!--    <li><a href="https://twitter.com/mikejacobson89/" target="_blank"><img src="Social%20Media%20Logos/twitter_logo.png" class="icon" id="twitter" /></a></li> -->
-        <li><a href="https://github.com/michaelbjacobson" target="_blank"><img src="http://michael-jacobson.co.uk/Social%20Media%20Logos/github_logo.png" class="icon" id="github" /></a></li>
-        <li><a href="https://www.linkedin.com/in/michael-jacobson-6b2676129/" target="_blank"><img src="http://michael-jacobson.co.uk/Social%20Media%20Logos/linkedin_logo.png" class="icon" id="linkedin" /></a></li>
-        <li><a href="https://www.instagram.com/michaelbjacobson/" target="_blank"><img src="http://michael-jacobson.co.uk/Social%20Media%20Logos/instagram_logo.png" class="icon" id="instagram" /></a></li>
+        <li><a href="https://github.com/michaelbjacobson" target="_blank"><img src="https://dl.dropboxusercontent.com/s/kwvhkuzd13n7ruo/github_logo.png?dl=0" class="icon" id="github" /></a></li>
+        <li><a href="https://www.linkedin.com/in/michael-jacobson-6b2676129/" target="_blank"><img src="https://dl.dropboxusercontent.com/s/q55vtizmm131iu7/linkedin_logo.png?dl=0" class="icon" id="linkedin" /></a></li>
+        <li><a href="https://www.instagram.com/michaelbjacobson/" target="_blank"><img src="https://dl.dropboxusercontent.com/s/52ppjawl89yrp71/instagram_logo.png?dl=0" class="icon" id="instagram" /></a></li>
     </ul>
 </div>
 
