--- a/views/gallery.erb
+++ b/views/gallery.erb
@@ -38,39 +38,39 @@
 <div class="main">
 <!--    <img src="Gallery%20Photos/Alice.jpg" class="lightbox-trigger-top" />
     <p class="captions">Birthday Girl | Hakckey, London</p> -->
-    <img src="http://michael-jacobson.co.uk/Gallery%20Photos/Artichoke.jpg" class="lightbox-trigger-top" />
+    <img src="https://dl.dropboxusercontent.com/s/86n23vjm8rviw6c/Artichoke.jpg?dl=0" class="lightbox-trigger-top" />
     <p class="captions">Globe Artichoke | Muswell Hill, London</p>
-    <img src="http://michael-jacobson.co.uk/Gallery%20Photos/Brighton.jpg" class="lightbox-trigger" />
+    <img src="https://dl.dropboxusercontent.com/s/11cossikhcr6som/Brighton.jpg?dl=0" class="lightbox-trigger" />
     <p class="captions">Brighton Pier | Brighton, East Sussex</p>
-    <img src="http://michael-jacobson.co.uk/Gallery%20Photos/Beach%20Huts.jpg" class="lightbox-trigger" />
+    <img src="https://dl.dropboxusercontent.com/s/n6266ujgtcmkolf/Beach%20Huts.jpg?dl=0" class="lightbox-trigger" />
     <p class="captions">Beach Huts | Broadstairs, Kent</p>
-    <img src="http://michael-jacobson.co.uk/Gallery%20Photos/Broadstairs.jpg" class="lightbox-trigger" />
+    <img src="https://dl.dropboxusercontent.com/s/dpcdkpv8j7rig1g/Broadstairs.jpg?dl=0" class="lightbox-trigger" />
     <p class="captions">Broadstairs Pier | Broadstairs, Kent</p>
-    <img src="http://michael-jacobson.co.uk/Gallery%20Photos/Chinatown.jpg" class="lightbox-trigger" />
+    <img src="https://dl.dropboxusercontent.com/s/6q7ebfmowgnewac/Chinatown.jpg?dl=0" class="lightbox-trigger" />
     <p class="captions">Chinatown | Soho, London</p>
-    <img src="http://michael-jacobson.co.uk/Gallery%20Photos/Corn.jpg" class="lightbox-trigger" />
+    <img src="https://dl.dropboxusercontent.com/s/dyri1i3656d1m6p/Corn.jpg?dl=0" class="lightbox-trigger" />
     <p class="captions">Tall Corn | Muswell Hill, London</p>
-    <img src="http://michael-jacobson.co.uk/Gallery%20Photos/Dad%202.jpg" class="lightbox-trigger" />
+    <img src="https://dl.dropboxusercontent.com/s/38ggl1vsm2utae5/Dad%202.jpg?dl=0" class="lightbox-trigger" />
     <p class="captions">Lunch with Dad | Bedford, Bedfordshire</p>
-    <img src="http://michael-jacobson.co.uk/Gallery%20Photos/Dad.jpg" class="lightbox-trigger" />
+    <img src="https://dl.dropboxusercontent.com/s/pon7ef9pa44ov9s/Dad.jpg?dl=0" class="lightbox-trigger" />
     <p class="captions">Dad with Gelatto | Broadstairs, Kent</p>
-    <img src="http://michael-jacobson.co.uk/Gallery%20Photos/Door.jpg" class="lightbox-trigger" />
+    <img src="https://dl.dropboxusercontent.com/s/s976ocgyp7fg1cp/Door.jpg?dl=0" class="lightbox-trigger" />
     <p class="captions">Art Deco Door | Portland Square, London</p>
-    <img src="http://michael-jacobson.co.uk/Gallery%20Photos/Frost.jpg" class="lightbox-trigger" />
+    <img src="https://dl.dropboxusercontent.com/s/c422f9t2qiz8dp6/Frost.jpg?dl=0" class="lightbox-trigger" />
     <p class="captions">Frost Crystals | Muswell Hill, London</p>
-    <img src="http://michael-jacobson.co.uk/Gallery%20Photos/Moggie.jpg" class="lightbox-trigger" />
+    <img src="https://dl.dropboxusercontent.com/s/oc1uor20t9doja5/Moggie.jpg?dl=0" class="lightbox-trigger" />
     <p class="captions">Homeward Bound | Yarcombe, Devon</p>
-    <img src="http://michael-jacobson.co.uk/Gallery%20Photos/Nuffield%20Place.jpg" class="lightbox-trigger" />
+    <img src="https://dl.dropboxusercontent.com/s/vv5nsrhshop8d67/Nuffield%20Place.jpg?dl=0" class="lightbox-trigger" />
     <p class="captions">Nuffield Place | Chiltern Hills, Oxfordshire</p>
-    <img src="http://michael-jacobson.co.uk/Gallery%20Photos/Silhouette.jpg" class="lightbox-trigger" />
+    <img src="https://dl.dropboxusercontent.com/s/r4ld3u2lo6zdq87/Silhouette.jpg?dl=0" class="lightbox-trigger" />
     <p class="captions">Silhouettes over the Beach | Broadstairs, Kent</p>
-    <img src="http://michael-jacobson.co.uk/Gallery%20Photos/Spitfires.jpg" class="lightbox-trigger" />
+    <img src="https://dl.dropboxusercontent.com/s/2mothmntn0zfnsy/Spitfires.jpg?dl=0" class="lightbox-trigger" />
     <p class="captions">Supermarine Spitfires | Bedford, Bedfordshire</p>
-    <img src="http://michael-jacobson.co.uk/Gallery%20Photos/Still%20Life.jpg" class="lightbox-trigger" />
+    <img src="https://dl.dropboxusercontent.com/s/ik28oi9jwfxvpa7/Still%20Life.jpg?dl=0" class="lightbox-trigger" />
     <p class="captions">Still Life | Muswell Hill, London</p>
-    <img src="http://michael-jacobson.co.uk/Gallery%20Photos/Sunset.jpg" class="lightbox-trigger" />
+    <img src="https://dl.dropboxusercontent.com/s/gqqq51m8qm3wht2/Sunset.jpg?dl=0" class="lightbox-trigger" />
     <p class="captions">Sunset | Greenwich, London</p>
-    <img src="http://michael-jacobson.co.uk/Gallery%20Photos/Textile.jpg" class="lightbox-trigger" />
+    <img src="https://dl.dropboxusercontent.com/s/kyttptlc6jb81s7/Textile.jpg?dl=0" class="lightbox-trigger" />
     <p class="captions">Vintage Japanese Textile | Muswell Hill, London</p>
 </div>
 
