• further update copy on portfolio page

--- a/views/portfolio.erb
+++ b/views/portfolio.erb
@@ -36,14 +36,14 @@
             <h3 class="portfolio_title">tinyBlogger</h3>
             <a href="http://tinyblogger.co.uk" target="_blank">www.tinyblogger.co.uk</a>
             <p class="portfolio_blurb">A simple microblogging platform.<br>
-            Built using Ruby, Sinatra, vanilla JavaScript, jQuery, HTML5, and CSS3.</p>
+            Built using Ruby, Sinatra, vanilla JavaScript, jQuery, HTML, and CSS.</p>
         </div>
         <br><br>
         <div></div>
             <h3 class="portfolio_title">Ruby, Paper, Scissors!</h3>
             <a href="http://rubypaperscissors.co.uk" target="_blank">www.rubypaperscissors.co.uk</a>
-            <p class="portfolio_blurb">Play Rock, Paper, Scissors (also known as Ro-sham-bo) online.<br>
-            Built using Ruby, Sinatra, HTML5 and CSS3.</p>
+            <p class="portfolio_blurb">Play the well-known game Rock, Paper, Scissors online.<br>
+            Built using Ruby, Sinatra, HTML and CSS.</p>
         </div>
     </div>
 </div>
