• add close button to gallery lightbox

--- a/views/gallery.erb
+++ b/views/gallery.erb
@@ -32,7 +32,8 @@
 </div>
 
 <div class="lightbox">
-    <img src="http://michael-jacobson.co.uk/Gallery%20Photos/Artichoke.jpg" class="lightbox-image">
+    <img src="https://dl.dropboxusercontent.com/s/90ocbh123den2y2/exit.png?dl=0" class="close_lightbox">
+    <img src="#" class="lightbox-image">
 </div>
 
 <div class="main">
