--- a/public/CSS/my_stylesheet.css
+++ b/public/CSS/my_stylesheet.css
@@ -381,3 +381,12 @@ input, textarea {
 #confirmation_lightbox {
     visibility: visible;
 }
+
+.close_lightbox {
+    position: absolute;
+    left: 15px;
+    top: 15px;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+}
