--- a/views/contact.erb
+++ b/views/contact.erb
@@ -33,7 +33,7 @@
 <div class="main">
 
 <div class="form_container">
-    <form method="post" name="email_form" action="/contact/new">
+    <form method="post" name="email_form" action="/contact/create">
         Full Name<br><input type="text" name="name" id="name"><br>
         <br>
         Email<br><input type="email" name="email" id="email"><br>
