• change all image src urls to point to amazon web services s3 bucket

--- a/views/gallery.erb
+++ b/views/gallery.erb
@@ -32,46 +32,46 @@
 </div>
 
 <div class="lightbox">
-    <img src="https://dl.dropboxusercontent.com/s/90ocbh123den2y2/exit.png?dl=0" class="close_lightbox">
+    <img src="https://s3.eu-west-2.amazonaws.com/michaeljacobson/exit.png" class="close_lightbox">
     <img src="#" class="lightbox-image">
 </div>
 
 <div class="main">
 <!--    <img src="Gallery%20Photos/Alice.jpg" class="lightbox-trigger-top" />
     <p class="captions">Birthday Girl | Hakckey, London</p> -->
-    <img src="https://dl.dropboxusercontent.com/s/86n23vjm8rviw6c/Artichoke.jpg?dl=0" class="lightbox-trigger-top" />
+    <img src="https://s3.eu-west-2.amazonaws.com/michaeljacobson/Artichoke.jpg" class="lightbox-trigger-top" />
     <p class="captions">Globe Artichoke | Muswell Hill, London</p>
-    <img src="https://dl.dropboxusercontent.com/s/11cossikhcr6som/Brighton.jpg?dl=0" class="lightbox-trigger" />
+    <img src="https://s3.eu-west-2.amazonaws.com/michaeljacobson/Brighton.jpg" class="lightbox-trigger" />
     <p class="captions">Brighton Pier | Brighton, East Sussex</p>
-    <img src="https://dl.dropboxusercontent.com/s/n6266ujgtcmkolf/Beach%20Huts.jpg?dl=0" class="lightbox-trigger" />
+    <img src="https://s3.eu-west-2.amazonaws.com/michaeljacobson/Beach%20Huts.jpg" class="lightbox-trigger" />
     <p class="captions">Beach Huts | Broadstairs, Kent</p>
-    <img src="https://dl.dropboxusercontent.com/s/dpcdkpv8j7rig1g/Broadstairs.jpg?dl=0" class="lightbox-trigger" />
+    <img src="https://s3.eu-west-2.amazonaws.com/michaeljacobson/Broadstairs.jpg" class="lightbox-trigger" />
     <p class="captions">Broadstairs Pier | Broadstairs, Kent</p>
-    <img src="https://dl.dropboxusercontent.com/s/6q7ebfmowgnewac/Chinatown.jpg?dl=0" class="lightbox-trigger" />
+    <img src="https://s3.eu-west-2.amazonaws.com/michaeljacobson/Chinatown.jpg" class="lightbox-trigger" />
     <p class="captions">Chinatown | Soho, London</p>
-    <img src="https://dl.dropboxusercontent.com/s/dyri1i3656d1m6p/Corn.jpg?dl=0" class="lightbox-trigger" />
+    <img src="https://s3.eu-west-2.amazonaws.com/michaeljacobson/Corn.jpg" class="lightbox-trigger" />
     <p class="captions">Tall Corn | Muswell Hill, London</p>
-    <img src="https://dl.dropboxusercontent.com/s/38ggl1vsm2utae5/Dad%202.jpg?dl=0" class="lightbox-trigger" />
+    <img src="https://s3.eu-west-2.amazonaws.com/michaeljacobson/Dad%202.jpg" class="lightbox-trigger" />
     <p class="captions">Lunch with Dad | Bedford, Bedfordshire</p>
-    <img src="https://dl.dropboxusercontent.com/s/pon7ef9pa44ov9s/Dad.jpg?dl=0" class="lightbox-trigger" />
+    <img src="https://s3.eu-west-2.amazonaws.com/michaeljacobson/Dad.jpg" class="lightbox-trigger" />
     <p class="captions">Dad with Gelatto | Broadstairs, Kent</p>
-    <img src="https://dl.dropboxusercontent.com/s/s976ocgyp7fg1cp/Door.jpg?dl=0" class="lightbox-trigger" />
+    <img src="https://s3.eu-west-2.amazonaws.com/michaeljacobson/Door.jpg" class="lightbox-trigger" />
     <p class="captions">Art Deco Door | Portland Square, London</p>
-    <img src="https://dl.dropboxusercontent.com/s/c422f9t2qiz8dp6/Frost.jpg?dl=0" class="lightbox-trigger" />
+    <img src="https://s3.eu-west-2.amazonaws.com/michaeljacobson/Frost.jpg" class="lightbox-trigger" />
     <p class="captions">Frost Crystals | Muswell Hill, London</p>
-    <img src="https://dl.dropboxusercontent.com/s/oc1uor20t9doja5/Moggie.jpg?dl=0" class="lightbox-trigger" />
+    <img src="https://s3.eu-west-2.amazonaws.com/michaeljacobson/Moggie.jpg" class="lightbox-trigger" />
     <p class="captions">Homeward Bound | Yarcombe, Devon</p>
-    <img src="https://dl.dropboxusercontent.com/s/vv5nsrhshop8d67/Nuffield%20Place.jpg?dl=0" class="lightbox-trigger" />
+    <img src="https://s3.eu-west-2.amazonaws.com/michaeljacobson/Nuffield%20Place.jpg" class="lightbox-trigger" />
     <p class="captions">Nuffield Place | Chiltern Hills, Oxfordshire</p>
-    <img src="https://dl.dropboxusercontent.com/s/r4ld3u2lo6zdq87/Silhouette.jpg?dl=0" class="lightbox-trigger" />
+    <img src="https://s3.eu-west-2.amazonaws.com/michaeljacobson/Silhouette.jpg" class="lightbox-trigger" />
     <p class="captions">Silhouettes over the Beach | Broadstairs, Kent</p>
-    <img src="https://dl.dropboxusercontent.com/s/2mothmntn0zfnsy/Spitfires.jpg?dl=0" class="lightbox-trigger" />
+    <img src="https://s3.eu-west-2.amazonaws.com/michaeljacobson/Spitfires.jpg" class="lightbox-trigger" />
     <p class="captions">Supermarine Spitfires | Bedford, Bedfordshire</p>
-    <img src="https://dl.dropboxusercontent.com/s/ik28oi9jwfxvpa7/Still%20Life.jpg?dl=0" class="lightbox-trigger" />
+    <img src="https://s3.eu-west-2.amazonaws.com/michaeljacobson/Still%20Life.jpg" class="lightbox-trigger" />
     <p class="captions">Still Life | Muswell Hill, London</p>
-    <img src="https://dl.dropboxusercontent.com/s/gqqq51m8qm3wht2/Sunset.jpg?dl=0" class="lightbox-trigger" />
+    <img src="https://s3.eu-west-2.amazonaws.com/michaeljacobson/Sunset.jpg" class="lightbox-trigger" />
     <p class="captions">Sunset | Greenwich, London</p>
-    <img src="https://dl.dropboxusercontent.com/s/kyttptlc6jb81s7/Textile.jpg?dl=0" class="lightbox-trigger" />
+    <img src="https://s3.eu-west-2.amazonaws.com/michaeljacobson/Textile.jpg" class="lightbox-trigger" />
     <p class="captions">Vintage Japanese Textile | Muswell Hill, London</p>
 </div>
 
