--- a/views/portfolio.erb
+++ b/views/portfolio.erb
@@ -34,14 +34,14 @@
     <div id="portfolio">
         <div></div>
             <h3 class="portfolio_title">tinyBlogger</h3>
-            <a href="http://tinyblogger.co.uk" target="_blank">www.tinyblogger.co.uk</a>
+            <a href="https://tinyblogger.herokuapp.com" target="_blank">www.tinyblogger.co.uk</a>
             <p class="portfolio_blurb">A simple microblogging platform.<br>
             Built using Ruby, Sinatra, vanilla JavaScript, jQuery, HTML, and CSS.</p>
         </div>
         <br><br>
         <div></div>
             <h3 class="portfolio_title">Ruby, Paper, Scissors!</h3>
-            <a href="http://rubypaperscissors.co.uk" target="_blank">www.rubypaperscissors.co.uk</a>
+            <a href="https://ruby-paper-scissors.herokuapp.com" target="_blank">www.rubypaperscissors.co.uk</a>
             <p class="portfolio_blurb">Play the well-known game Rock, Paper, Scissors online.<br>
             Built using Ruby, Sinatra, HTML and CSS.</p>
         </div>
