• update footer text

--- a/views/blog.erb
+++ b/views/blog.erb
@@ -41,7 +41,7 @@
 </div>
 
 <div class="footer">
-    <p>© 2017 Michael Jacobson | All rights reserved | Website design by Michael Jacobson</p>
+    <p>© 2017 Michael Jacobson | All rights reserved | Website crafted by Michael Jacobson</p>
 </div>
 
 </body>
