--- a/views/gallery.erb
+++ b/views/gallery.erb
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
 
 </head>
-<body>
+<body id="gallery_body">
 
 <div class="header">
     <h1>Michael Jacobson</h1>
