--- a/views/index.erb
+++ b/views/index.erb
@@ -34,7 +34,7 @@
 <div class="main">
 
     <div id="about_me">
-        <img src="https://s3.eu-west-2.amazonaws.com/michaeljacobson/me.jpg" id="me" />
+        <img src="https://s3.eu-west-2.amazonaws.com/michaeljacobson/me_bw.jpeg" id="me" />
         <p class="about_me_text">"Amateur photographer and mechanic, junior software engineer.<br>Currently studying at Makers Academy."</p>
     </div>
 
